moreConfigUpdat
* Moved the mod's pause button to the right bottom corner of the screen
* Refactored most of the config's code to make it more compact
* Added partial support to Minecraft's native narrator
* Added a unified color hex -> int function for ColorEntry