@@ -5,6 +5,7 @@ import me.lukiiy.lysten.Lysten;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.ChatFormatting;
+import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.*;
 import net.minecraft.client.gui.components.events.GuiEventListener;
@@ -12,11 +13,15 @@ import net.minecraft.client.gui.layouts.HeaderAndFooterLayout;
 import net.minecraft.client.gui.layouts.LayoutSettings;
 import net.minecraft.client.gui.layouts.LinearLayout;
 import net.minecraft.client.gui.narration.NarratableEntry;
+import net.minecraft.client.gui.narration.NarratedElementType;
+import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 @Environment(EnvType.CLIENT)
 public class IngameConfScreen extends Screen {
@@ -34,12 +39,12 @@ public class IngameConfScreen extends Screen {
     @Override
     protected void init() {
         layout.addToHeader(LinearLayout.vertical().spacing(8)).addChild(new StringWidget(TITLE, font), LayoutSettings::alignHorizontallyCenter);
-
         list = new ConfigList();
 
         layout.addToContents(list);
         layout.addToFooter(LinearLayout.horizontal().spacing(8)).addChild(Button.builder(CommonComponents.GUI_DONE, b -> onClose()).width(100).build());
         layout.visitWidgets(this::addRenderableWidget);
+
         repositionElements();
     }
 
@@ -63,8 +68,12 @@ public class IngameConfScreen extends Screen {
     }
 
     private class ConfigList extends ContainerObjectSelectionList<ConfigList.Entry> {
+        public final Font font;
+
         public ConfigList() {
             super(IngameConfScreen.this.minecraft, IngameConfScreen.this.width, layout.getContentHeight(), layout.getHeaderHeight(), 24);
+
+            font = IngameConfScreen.this.font;
             loadStuff();
         }
 
@@ -104,8 +113,45 @@ public class IngameConfScreen extends Screen {
             return 310;
         }
 
-        abstract static class Entry extends ContainerObjectSelectionList.Entry<Entry> {
+        private EditBox createEditBox(String key, String defaultValue, int width) {
+            EditBox box = new EditBox(font, 0, 0, width, 20, Component.literal(key));
+
+            box.setValue(Lysten.CONFIG.getOrDefault(key, defaultValue));
+            return box;
+        }
+
+        private record StaticNarration(Component text) implements NarratableEntry {
+            @Override
+            public NarrationPriority narrationPriority() {
+                return NarrationPriority.HOVERED;
+            }
+
+            @Override
+            public void updateNarration(NarrationElementOutput output) {
+                output.add(NarratedElementType.TITLE, text);
+            }
+        }
+
+        abstract class Entry extends ContainerObjectSelectionList.Entry<Entry> {
             protected final List<AbstractWidget> children = Lists.newArrayList();
+            protected final Component label;
+            protected final StaticNarration labelNarration;
+            protected AbstractWidget widget;
+
+            protected Entry(Component label, AbstractWidget widget) {
+                this.label = label;
+                this.labelNarration = label == null ? null : new StaticNarration(label);
+                setWidget(widget);
+            }
+
+            protected void setWidget(AbstractWidget widget) {
+                this.widget = widget;
+
+                if (widget != null) {
+                    widget.setMessage(label);
+                    children.add(widget);
+                }
+            }
 
             @Override
             public List<? extends GuiEventListener> children() {
@@ -114,233 +160,118 @@ public class IngameConfScreen extends Screen {
 
             @Override
             public List<? extends NarratableEntry> narratables() {
-                return children;
+                return widget != null ? children : (labelNarration != null ? List.of(labelNarration) : List.of());
+            }
+
+            @Override
+            public void render(GuiGraphics instance, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
+                if (label != null) instance.drawString(ConfigList.this.font, label, x, y + 6, -1);
+
+                if (widget != null) {
+                    widget.setX(x + width - widget.getWidth());
+                    widget.setY(y);
+                    widget.render(instance, mx, my, delta);
+                }
             }
         }
 
         class CategoryEntry extends Entry {
-            private final Component text;
-
-            public CategoryEntry(String label) {
-                this.text = Component.translatable("lysten.config.category." + label).withStyle(ChatFormatting.YELLOW, ChatFormatting.BOLD);
+            public CategoryEntry(String key) {
+                super(Component.translatable("lysten.config.category." + key).withStyle(ChatFormatting.YELLOW, ChatFormatting.BOLD), null);
             }
 
             @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawCenteredString(font, text, x + width / 2, y + 6, -1);
+            public void render(GuiGraphics instance, int index, int y, int x, int width, int h, int mx, int my, boolean hovered, float delta) {
+                instance.drawCenteredString(font, label, x + width / 2, y + 6, -1);
             }
         }
 
         class BooleanEntry extends Entry {
-            private final Checkbox checkbox;
-            private final Component label;
-
             public BooleanEntry(String key) {
-                this.label = Component.translatable("lysten.setting." + key);
-                boolean value = Lysten.CONFIG.getBoolean(key);
-
-                checkbox = Checkbox.builder(Component.empty(), font).selected(value).onValueChange((box, val) -> Lysten.CONFIG.set(key, String.valueOf(val))).build();
-                children.add(checkbox);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
-
-                checkbox.setX(x + width - Checkbox.getBoxSize(font));
-                checkbox.setY(y + 2);
-                checkbox.render(guiGraphics, mx, my, delta);
+                super(Component.translatable("lysten.setting." + key), Checkbox.builder(Component.empty(), font).selected(Lysten.CONFIG.getBoolean(key)).onValueChange((b, v) -> Lysten.CONFIG.set(key, String.valueOf(v))).build());
             }
         }
 
         class IntEntry extends Entry {
-            private final EditBox box;
-            private final Component label;
-
             public IntEntry(String key, int min, int max) {
-                this.label = Component.translatable("lysten.setting." + key);
-                String value = Lysten.CONFIG.get(key);
+                super(Component.translatable("lysten.setting." + key), createEditBox(key, "0", 60));
+                EditBox box = (EditBox) widget;
 
-                box = new EditBox(font, 0, 0, 60, 20, Component.literal(key));
-                box.setValue(value != null ? value : "");
-                box.setFilter(s -> s.isEmpty() && s.matches("\\d*"));
-                box.setResponder(s -> {
-                    if (s.isEmpty()) {
-                        Lysten.CONFIG.set(key, "0");
-                        return;
-                    }
-
-                    int v = Integer.parseInt(s);
-
-                    Lysten.CONFIG.set(key, String.valueOf(Math.max(min, Math.min(max, v))));
-                });
-                box.setTooltip(Tooltip.create(Component.translatable("lysten.config.intbox", min, max)));
-
-                children.add(box);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
-
-                box.setX(x + width - box.getWidth());
-                box.setY(y);
-                box.render(guiGraphics, mx, my, delta);
+                box.setFilter(s -> s.isEmpty() || s.matches("\\d+"));
+                box.setResponder(s -> Lysten.CONFIG.set(key, String.valueOf(Math.clamp(s.isEmpty() ? 0 : Integer.parseInt(s), min, max))));
             }
         }
 
         class ColorEntry extends Entry {
-            private final EditBox box;
-            private final Component label;
-
             public ColorEntry(String key) {
-                this.label = Component.translatable("lysten.setting." + key);
+                super(Component.translatable("lysten.setting." + key), createEditBox(key, "", 60));
+                EditBox box = (EditBox) widget;
 
-                String value = Lysten.CONFIG.get(key);
-                String initialHex = "0";
-
-                if (value != null) {
-                    try {
-                        initialHex = Integer.toHexString(Integer.parseInt(value));
-                    } catch (NumberFormatException ignored) {}
-                }
-
-                box = new EditBox(font, 0, 0, 60, 20, Component.literal(key));
-                box.setValue(initialHex);
                 box.setMaxLength(8);
                 box.setFilter(s -> s.matches("^[0-9A-Fa-f]{0,8}$"));
-                box.setResponder(s -> {
-                    if (s.isEmpty()) {
-                        Lysten.CONFIG.set(key, "0");
-                        return;
-                    }
-
-                    try {
-                        long raw = Long.parseLong(s, 16);
-                        int color = (int)(raw & 0xFFFFFFFFL);
-                        Lysten.CONFIG.set(key, String.valueOf(color));
-                    } catch (NumberFormatException ignored) {}
-                });
-
-                box.setTooltip(Tooltip.create(Component.translatable("lysten.config.colorbox")));
-                children.add(box);
+                box.setValue(Integer.toHexString(Integer.parseInt(Lysten.CONFIG.getOrDefault(key, "0"))));
+                box.setResponder(s -> Lysten.CONFIG.set(key, String.valueOf(hexToInt(s))));
             }
 
             @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
+            public void render(GuiGraphics instance, int index, int y, int x, int width, int h, int mx, int my, boolean hovered, float delta) {
+                super.render(instance, index, y, x, width, h, mx, my, hovered, delta);
 
-                box.setX(x + width - box.getWidth());
-                box.setY(y);
-
-                int parsed = 0;
-                try {
-                    if (!box.getValue().isEmpty()) {
-                        long raw = Long.parseLong(box.getValue(), 16);
-
-                        parsed = (int) (raw & 0xFFFFFFFFL);
-                    }
-                } catch (NumberFormatException ignored) {}
-
-                box.render(guiGraphics, mx, my, delta);
-
-                if (parsed != 0) {
+                int color = hexToInt(((EditBox) widget).getValue());
+                if (color != 0) {
                     int size = 10;
-                    int offset = size / 2;
-                    int px = box.getX() + box.getWidth() - offset;
-                    int py = box.getY() - offset;
+                    int px = widget.getX() + widget.getWidth() - size / 2;
+                    int py = widget.getY() - size / 2;
 
-                    guiGraphics.fill(px, py, px + size, py + size, 0xFF000000 | parsed);
-                    guiGraphics.fill(px, py, px + size, py + 1, 0xFF000000);
-                    guiGraphics.fill(px, py, px + 1, py + size, 0xFF000000);
-                    guiGraphics.fill(px + size - 1, py, px + size, py + size, 0xFF000000);
-                    guiGraphics.fill(px, py + size - 1, px + size, py + size, 0xFF000000);
+                    instance.fill(px, py, px + size, py + size, 0xFF000000 | color);
+                    instance.renderOutline(px, py, size, size, 0xFF000000);
+                }
+            }
+
+            private static int hexToInt(String hex) {
+                if (hex == null || hex.isEmpty()) return 0;
+
+                hex = hex.replace("#", "");
+                if (hex.length() == 6) hex = "FF" + hex;
+
+                try {
+                    return (int) (Long.parseLong(hex, 16) & 0xFFFFFFFFL);
+                } catch (NumberFormatException e) {
+                    return 0;
                 }
             }
         }
 
         class FloatEntry extends Entry {
-            private final EditBox box;
-            private final Component label;
-
             public FloatEntry(String key, float min, float max) {
-                this.label = Component.translatable("lysten.setting." + key);
-                String value = Lysten.CONFIG.get(key);
+                super(Component.translatable("lysten.setting." + key), createEditBox(key, "1.0", 80));
+                EditBox box = (EditBox) widget;
 
-                box = new EditBox(font, 0, 0, 80, 20, Component.literal(key));
-                box.setValue(value != null ? value : "1.0");
                 box.setFilter(s -> s.matches("\\d*\\.?\\d*"));
                 box.setResponder(s -> {
-                    if (!s.isEmpty() && !s.equals(".")) {
-                        float v = Float.parseFloat(s);
+                    if (s.isEmpty() || s.equals(".")) return;
 
-                        Lysten.CONFIG.set(key, String.valueOf(Math.max(min, Math.min(max, v))));
-                    }
+                    Lysten.CONFIG.set(key, String.valueOf(Math.clamp(Float.parseFloat(s), min, max)));
                 });
-                children.add(box);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
-
-                box.setX(x + width - box.getWidth());
-                box.setY(y);
-                box.render(guiGraphics, mx, my, delta);
             }
         }
 
         class StringEntry extends Entry {
-            private final EditBox box;
-            private final Component label;
-
             public StringEntry(String key) {
-                this.label = Component.translatable("lysten.setting." + key);
-                String value = Lysten.CONFIG.get(key);
-
-                box = new EditBox(font, 0, 0, 120, 20, Component.literal(key));
-                box.setValue(value != null ? value : "");
-                box.setResponder(s -> Lysten.CONFIG.set(key, s));
-                children.add(box);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
-
-                box.setX(x + width - box.getWidth());
-                box.setY(y);
-                box.render(guiGraphics, mx, my, delta);
+                super(Component.translatable("lysten.setting." + key), createEditBox(key, "", 120));
+                ((EditBox) widget).setResponder(s -> Lysten.CONFIG.set(key, s));
             }
         }
 
         class EnumEntry<T extends Enum<T>> extends Entry {
-            private final CycleButton<T> button;
-            private final Component label;
-            private final int width;
-
             public EnumEntry(String key, String cycleLabel, Class<T> enumClass) {
-                this.label = Component.translatable("lysten.setting." + key);
+                super(Component.translatable("lysten.setting." + key), null);
+
                 T[] values = enumClass.getEnumConstants();
-                String confValue = Lysten.CONFIG.get(key);
-                T current = confValue != null ? Enum.valueOf(enumClass, confValue) : values[0];
+                T current = Optional.ofNullable(Lysten.CONFIG.get(key)).map(v -> Enum.valueOf(enumClass, v)).orElse(values[0]);
 
-                int maxEnumWidth = 0;
-                for (T value : values) if (font.width(value.name()) > maxEnumWidth) maxEnumWidth = font.width(value.name());
-
-                width = font.width(Component.translatable(cycleLabel)) + font.width(Component.literal(": ")) + maxEnumWidth + 10;
-
-                button = CycleButton.<T>builder(val -> Component.literal(val.name())).withValues(values).withInitialValue(current).create(0, 0, width, 20, Component.translatable(cycleLabel), (btn, val) -> Lysten.CONFIG.set(key, val.name()));
-                children.add(button);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int y, int x, int width, int height, int mx, int my, boolean hovered, float delta) {
-                guiGraphics.drawString(font, label, x, y + 6, -1);
-
-                button.setX(x + width - button.getWidth());
-                button.setY(y);
-                button.render(guiGraphics, mx, my, delta);
+                int width = font.width(Component.translatable(cycleLabel)) + font.width(": ") + Arrays.stream(values).mapToInt(v -> font.width(v.name())).max().orElse(0) + 10;
+                setWidget(CycleButton.<T>builder(v -> Component.literal(v.name())).withValues(values).withInitialValue(current).create(0, 0, width, 20, Component.translatable(cycleLabel), (btn, val) -> Lysten.CONFIG.set(key, val.name())));
             }
         }
     }
